--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
         <div class="job"><p>"Front-end developer and avid reader."</p></div>
       </div>
       <ul class="social-link">
-        <a href="#"><li><button class="btn">GitHub</button></a></li>
-        <a href="#"><li><button class="btn">Frontend Mentor</button></a></li>
-        <a href="#"><li><button class="btn">LinkedIn</button></a></li>
-        <a href="#"><li><button class="btn">Twitter</button></a></li>
-        <a href="#"><li><button class="btn">Instagram</button></a></li>
+        <li><button class="btn">GitHub</button></li>
+        <li><button class="btn">Frontend Mentor</button></li>
+        <li><button class="btn">LinkedIn</button></li>
+        <li><button class="btn">Twitter</button></li>
+        <li><button class="btn">Instagram</button></li>
       </ul>
     </div>
     
