--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
         <div class="job"><p>"Front-end developer and avid reader."</p></div>
       </div>
       <ul class="social-link">
-        <li><button class="btn">GitHub</button></li>
-        <li><button class="btn">Frontend Mentor</button></li>
-        <li><button class="btn">LinkedIn</button></li>
-        <li><button class="btn">Twitter</button></li>
-        <li><button class="btn">Instagram</button></li>
+        <li><button class="btn" type="button">GitHub</button></li>
+        <li><button class="btn" type="button">Frontend Mentor</button></li>
+        <li><button class="btn" type="button">LinkedIn</button></li>
+        <li><button class="btn" type="button">Twitter</button></li>
+        <li><button class="btn" type="button">Instagram</button></li>
       </ul>
     </div>
     
